refactor(null-safety): enforce null-safety with `@NonNull` annotations
- Apply `@NonNull` to method parameters, fields, and constants.
- Use `@RequiredArgsConstructor` in `SelfKickListener` for constructor injection.
- Update utility methods to return "`N/A`" for `null` inputs.

Signed-off-by: Egg-03 <111327101+eggy03@users.noreply.github.com>